--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <header>
         <img src="logo (1).png">
     </header>
+    <article>
+        <div class="bg"></div>
+        <div class="sun"></div>
+    </article>
     <div id="hi">
     </div>
     <section>
